# CI_Sample_Python

./: .gitignore  Jenkinsfile  LICENSE  MANIFEST.in  README.md  jenkinsfile  mypass.txt  requirements.txt  setup.cfg  sonar-project.properties
flaskr/: config.py
