[metadata]
name = flaskr
version = 1.0.0
url = https://github.com/prabha6kar/
license = GPLv3
maintainer = Prabhakaran.Sampath
maintainer_email = prabhakaran@zealtechlab.co.in
description = The basic blog app built in the Flask tutorial.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
setup_requires =
    twine

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr
